fixed text-align: center

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
  background-color: MediumSlateBlue;
  height: 400px;
  width: 100%;
- align-self: center;
+ text-align: center;
 }
 
 .profile-pic {
